[project]
name = "claude-limit-primer"
version = "2.0.0"
description = "Keep the Claude Code subscription usage window ticking on a schedule you control, steered from Telegram."
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
dependencies = [
    "aiogram>=3.22",
    "loguru>=0.7.3",
    "pydantic>=2.11",
    "pydantic-settings>=2.10",
    "tenacity>=9.1",
]

[project.scripts]
primer = "primer.cli:main"

[dependency-groups]
dev = [
    "mypy>=1.17",
    "ruff>=0.12",
    "ty>=0.0.1a19",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["primer"]

# --------------------------------------------------------------------------- #
# ruff
# --------------------------------------------------------------------------- #
[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    # Docstrings are written where they add value; not mandated everywhere.
    "D100", "D101", "D102", "D103", "D104", "D105", "D106", "D107",
    # Conflict with `ruff format` (trailing commas / implicit concat).
    "COM812", "ISC001",
    # Long, user-facing exception messages (PlanError) are the point here.
    "TRY003", "EM101", "EM102",
    # Keep the old single-line `logger.error(...)` log output; tracebacks
    # would spam the user-visible primer.log.
    "TRY400",
    # loguru idiom: f-strings in log calls (no lazy %-interpolation).
    "G004",
    # Small time/format literals (60, 1, ...) read clearer inline.
    "PLR2004",
]

[tool.ruff.lint.per-file-ignores]
# handle_command / status_text are deliberate 1:1 ports of the old dispatch.
"primer/bot.py" = ["C901", "PLR0911", "PLR0912", "PLR0915"]
"primer/schedule.py" = ["C901", "PLR0912", "PLR0915"]
# The CLI talks to the terminal.
"primer/cli.py" = ["T201"]

[tool.ruff.lint.pydocstyle]
convention = "pep257"

# --------------------------------------------------------------------------- #
# mypy
# --------------------------------------------------------------------------- #
[tool.mypy]
python_version = "3.12"
strict = true
warn_unreachable = true

# --------------------------------------------------------------------------- #
# ty
# --------------------------------------------------------------------------- #
[tool.ty.environment]
python-version = "3.12"
